Features: - Added category section - Better color for speed - Better feedback adding torrent - Better search - Little UI QoL
